minikube/kompose.v5/ux-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: ux
  name: ux
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ux
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/minikubetesting-default: "true"
        io.kompose.service: ux
    spec:
      containers:
        - args:
            - sh
            - /entrypoint
          image: localhost:5000/local/ux
          name: ux
          resources: {}
      restartPolicy: Always

status: {}
