minikube/kompose.v5/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/minikubetesting-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - /entrypoint
            - worker
          image: localhost:5000/local/api
          name: worker
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pulp
              name: pulp-data
      restartPolicy: Always
      volumes:
        - name: pulp-data
          persistentVolumeClaim:
            claimName: pulp-data
status: {}
