minikube/kompose.v5/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "gunicorn"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
