minikube/kompose.v5/content-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: content
  name: content
spec:
  ports:
    - name: "24816"
      port: 24816
      targetPort: 24816
  selector:
    io.kompose.service: content
status:
  loadBalancer: {}
